  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005/03/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added environment variable "GWEN_SSL_DEBUG"
- reworked parts of GWEN_NetConnectionHTTP, GWEN_NetConnection and 
  GWEN_NetTransportSSL. This should work now with more banks.


2005/03/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added message digest SHA1
- simplified GWEN_Buffer functions for inserting bytes
- added functions
  - GWEN_Buffer_InsertRoom()
  - GWEN_Buffer_FillLeftWithBytes()
  - GWEN_MD_HashToBuffer()
  - GWEN_Padd_PaddWithPkcs1Bt1()
  - GWEN_Padd_UnpaddWithPkcs1Bt1()
  - GWEN_Padd_PaddWithPkcs1Bt2()
  - GWEN_Padd_UnpaddWithPkcs1Bt2()
- added GWEN_CryptToken framework (generic interface to cryptographic tokens,
  like keyfiles or chipcards)
- added much debugging to SSL code (I'm going to hunt this bug down now ;-)
- added functions to retrieve CryptToken data from XML (needed by 
  Libchipcard2)


2005/03/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in MsgEngine (was not taking all delimiters and terminators
  into account)


2005/03/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_Netconnection_Walk() now returns a timeout rather than an error when 
  select() has been interrupted by a signal.


2005/03/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_NetTransportSSL_StartConnect() now returns 
  GWEN_NetTransportResultWantRead instead of GWEN_NetTransportResultOk when
  the connect is in progress.
- same with GWEN_NetTransportSocket_StartConnect()
- GWEN_WaitCallback() now checks all currently entered callbacks

